@@ -9,6 +9,7 @@ Version 0.8.4~dev
 	* Catch plugins not declaring optional parameters, refs: #3308.
 	* Move optional default parameters to BasePlugin, closes: #3070 and
 	  refs: #3308.
+	* Make plugin configuration inheritance work again, closes: #3308.
 
 Version 0.8.3 Released on 2010/07/07
 
